correction on abbr style on firefox

--- a/content/static/custom_style.css
+++ b/content/static/custom_style.css
@@ -2,4 +2,5 @@ abbr, acronym
 {
 	border-bottom: .1em dashed;
 	cursor: help;
+	text-decoration: none;
 }
